name:                drilldown
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Sebastian Korten
maintainer:          sebastian.korten@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable driller
  main-is:           Driller.hs
  -- other-modules:
  hs-Source-Dirs:
    src
  build-depends:     base ==4.5.*,
                     text ==0.11.*,
                     transformers ==0.3.*,
                     bytestring,
                     dlist,
                     hashable,
                     -- ekg,
                     unordered-containers,
                     scotty,
                     aeson,
                     wai-extra,
                     postgresql-simple

  ghc-options: -O2 -Wall -funbox-strict-fields
  -- ghc-options: -O2 -Wall -funbox-strict-fields -with-rtsopts=-T -ddump-minimal-imports
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

