name:                driller
version:             0.2.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Sebastian Korten
maintainer:          sebastian.korten@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable driller
  main-is:           Driller.hs
  -- other-modules:
  hs-Source-Dirs:
    src
  build-depends:     base ==4.5.*
                   , text ==0.11.*
                   , transformers == 0.3.*
                   , bytestring >= 0.9 && < 0.11
                   , dlist >= 0.5 && < 0.6
                   , hashable == 1.2.*
                   -- , ekg == 0.3.*
                   , unordered-containers == 0.2.*
                   , scotty == 0.4.*
                   , aeson == 0.6.*
                   , wai-extra == 1.3.*
                   , postgresql-simple == 0.2.*

  ghc-options: -O2 -Wall -funbox-strict-fields
  -- ghc-options: -O2 -Wall -funbox-strict-fields -with-rtsopts=-T -ddump-minimal-imports
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

